fixed scaling issue on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -48,7 +48,7 @@
 .topSection h1, .darkSection h1{
     font-size: 50px;
     font-weight: 300;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 .main .headingHeavy, .darkSection .headingHeavy{
